src/tests/snapshots/all__version__authors.snap
---
source: src/tests/version.rs
assertion_line: 139
expression: json
---
meta:
  names: []
users: []

