src/tests/snapshots/all__version__show_by_crate_name_and_semver_no_published_by.snap
---
source: src/tests/version.rs
assertion_line: 120
expression: json
---
version:
  audit_actions: []
  crate: foo_vers_show_no_pb
  crate_size: 0
  created_at: "[datetime]"
  dl_path: /api/v1/crates/foo_vers_show_no_pb/1.0.0/download
  downloads: 0
  features: {}
  id: "[id]"
  license: ~
  links:
    authors: /api/v1/crates/foo_vers_show_no_pb/1.0.0/authors
    dependencies: /api/v1/crates/foo_vers_show_no_pb/1.0.0/dependencies
    version_downloads: /api/v1/crates/foo_vers_show_no_pb/1.0.0/downloads
  num: 1.0.0
  published_by: ~
  readme_path: /api/v1/crates/foo_vers_show_no_pb/1.0.0/readme
  updated_at: "[datetime]"
  yanked: false

